update codecov line to use bash

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,4 +29,4 @@ script:
   - coverage run -m pytest # run tests
 
 after_success:
-  - codecov # submit coverage
+  - bash <(curl -s https://codecov.io/bash) # submit code coverage
