--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
 #          echo $CONDA/bin >> $GITHUB_PATH
       - name: Install dependencies
         run: |
-          conda env create --file environment.yml
+          conda env create --file ../environment.yml
           conda activate collapse-env
       #      - name: Lint with flake8
       #        run: |
