--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           auto-update-conda: true
           python-version: ${{ matrix.python-version }}
-          environment-file: environment.yml
+          environment-file: ../environment.yml
 #      - name: Set up Python 3.8
 #        uses: actions/setup-python@v2
 #        with:
