--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,11 +18,13 @@ jobs:
         python-version: [ "3.7", "3.8" ]
 
     steps:
+      - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
         with:
           auto-update-conda: true
           python-version: ${{ matrix.python-version }}
           environment-file: ../environment.yml
+          activate-environment: collapse-env
 #      - name: Set up Python 3.8
 #        uses: actions/setup-python@v2
 #        with:
