--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - run: |
+          ls -a
       - uses: conda-incubator/setup-miniconda@v2
         with:
           auto-update-conda: true
