--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,8 @@ jobs:
       - uses: actions/checkout@v2
       - run: |
           ls -a
+      - run: |
+          pwd
       - uses: conda-incubator/setup-miniconda@v2
         with:
           auto-update-conda: true
