--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,7 @@ jobs:
 #          echo $CONDA/bin >> $GITHUB_PATH
       - name: Install dependencies
         run: |
+          conda init bash
           conda activate collapse-env
       #      - name: Lint with flake8
       #        run: |
