--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,10 +22,11 @@ jobs:
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
         with:
+          activate-environment: collapse-env
+          environment-file: environment.yml
           auto-update-conda: true
           python-version: ${{ matrix.python-version }}
-          environment-file: environment.yml
-          activate-environment: collapse-env
+          auto-activate-base: false
 #      - name: Set up Python 3.8
 #        uses: actions/setup-python@v2
 #        with:
@@ -36,8 +37,8 @@ jobs:
 #          echo $CONDA/bin >> $GITHUB_PATH
       - name: Install dependencies
         run: |
-          conda init bash
-          conda activate collapse-env
+          conda env list
+          conda info
       #      - name: Lint with flake8
       #        run: |
       #          conda install flake8
