--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
         with:
-          activate-environment: pynstein-env
+          activate-environment: pystein-env
           environment-file: environment.yml
           auto-update-conda: true
           python-version: ${{ matrix.python-version }}
@@ -69,7 +69,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
         with:
-          activate-environment: pynstein-env
+          activate-environment: pystein-env
           environment-file: environment.yml
           auto-update-conda: true
           python-version: ${{ matrix.python-version }}
