--- a/.pylintrc
+++ b/.pylintrc
@@ -7,10 +7,13 @@ method-rgx=[a-z_][a-z0-9_]{2,60}$
 attr-rgx=[a-z_][a-z0-9_]{1,60}$
 
 [MESSAGES CONTROL]
-disable=no-self-use
+disable=no-self-use,too-few-public-methods
 
 [FORMAT]
 max-line-length=200
+
+#dont require docstrings for small functions
+docstring-min-length=10
 
 [MISCELLANEOUS]
 
