--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,28 +30,18 @@ jobs:
           auto-update-conda: true
           python-version: ${{ matrix.python-version }}
           auto-activate-base: false
-#      - name: Set up Python 3.8
-#        uses: actions/setup-python@v2
-#        with:
-#          python-version: 3.8
-#      - name: Add Conda
-#        run: |
-#          # $CONDA is an environment variable pointing to the root of the miniconda directory
-#          echo $CONDA/bin >> $GITHUB_PATH
       - name: Install dependencies
         run: |
           conda env list
           conda info
-      #      - name: Lint with flake8
-      #        run: |
-      #          conda install flake8
-      #          # stop the build if there are Python syntax errors or undefined names
-      #          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-      #          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-      #          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Run Test Suite
         run: |
-          pytest
+          pytest --cov=./pystein --cov-report=xml
+      - name: "Upload coverage to Codecov"
+        uses: codecov/codecov-action@v1
+        with:
+          fail_ci_if_error: false
+          files: coverage.xml
   build-win:
     name: WIN Build (${{ matrix.python-version }}, ${{ matrix.os }})
     runs-on: ${{ matrix.os }}
@@ -74,25 +64,15 @@ jobs:
           auto-update-conda: true
           python-version: ${{ matrix.python-version }}
           auto-activate-base: false
-#      - name: Set up Python 3.8
-#        uses: actions/setup-python@v2
-#        with:
-#          python-version: 3.8
-#      - name: Add Conda
-#        run: |
-#          # $CONDA is an environment variable pointing to the root of the miniconda directory
-#          echo $CONDA/bin >> $GITHUB_PATH
       - name: Install dependencies
         run: |
           conda env list
           conda info
-      #      - name: Lint with flake8
-      #        run: |
-      #          conda install flake8
-      #          # stop the build if there are Python syntax errors or undefined names
-      #          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-      #          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-      #          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Run Test Suite
         run: |
-          python -m pytest
+          pytest --cov=cdtea --cov-report=xml
+      - name: "Upload coverage to Codecov"
+        uses: codecov/codecov-action@v1
+        with:
+          fail_ci_if_error: false
+          files: coverage.xml
