--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,7 +70,7 @@ jobs:
           conda info
       - name: Run Test Suite
         run: |
-          pytest --cov=cdtea --cov-report=xml
+          pytest --cov=pystein --cov-report=xml
       - name: "Upload coverage to Codecov"
         uses: codecov/codecov-action@v1
         with:
